--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<title>Filesystem Visualizer</title>
-		<script type="text/javascript" src="_build/default/main.bc.js" defer></script>
+		<script type="text/javascript" src="_build/default/src/main.bc.js" defer></script>
 	</head>
 	<body>
+		<div id="main"></div>
 	</body>
 </html>
