Draw some boxes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<script type="text/javascript" src="_build/default/src/main.bc.js" defer></script>
 	</head>
 	<body>
-		<div id="main"></div>
+		<div id="main" style="width: 50%; margin: 0 auto"></div>
 	</body>
 </html>
