--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Filesystem Visualizer</title>
+		<link rel="stylesheet" href="style.css">
 		<script type="text/javascript" src="_build/default/src/main.bc.js" defer></script>
 	</head>
 	<body>
