--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Filesystem Visualizer</title>
 		<link rel="stylesheet" href="style.css">
-		<script type="text/javascript" src="_build/default/src/main.bc.js" defer></script>
+		<script type="text/javascript" src="../_build/default/bin/viz.bc.js" defer></script>
 	</head>
 	<body>
 		<div id="main" style="width: 50%; margin: 0 auto"></div>
